feat: Add advanced todo features - Phase 1 (Backend & Services)
Comprehensive enhancement to support all advanced features:

**New TypeScript Types** (frontend/src/lib/types/todos.ts):
- TodoPriority, RecurrencePattern, TodoAttachment, TodoLocation
- Enhanced Todo interface with 15+ new fields
- Notification types and settings
- UserPreferences with theme, time format, auto-hide
- Smart features (ParsedDate, SmartSuggestion, BulkOperation)

**Services Created**:
- NotificationService: Push/email/in-app notifications with templates
- GeolocationService: Proximity detection, distance calculation, monitoring
- PreferencesService: User settings with real-time sync

**Enhanced TodoService**:
- Advanced filtering (search, tags, due dates, location, recurring)
- Bulk operations (complete, delete, set priority, add tag, move)
- Recurring task instances management
- Attachment upload/delete with storage integration
- Support for all 15+ new Todo fields

**Hooks Created**:
- use-notifications: Real-time notification management
- use-preferences: User preferences with helpers
- use-geolocation: Location permission, monitoring, proximity
- Enhanced use-todos: Attachments, bulk ops, recurring instances

**UI Enhancements**:
- TodoItem: Enhanced with priority badges, due dates, tags, location, recurring, attachments, notes
- Color-coded priority (low/med/high)
- Overdue detection with red highlighting
- Natural date formatting (Today, Tomorrow, etc.)
- Time format support (12h/24h)

**Database Tables Added**:
- NOTIFICATIONS, RECURRING_INSTANCES, USER_PREFERENCES
- Updated Tables constant with new table names

**Dependencies**:
- Added date-fns for date formatting and manipulation

Next: UI components, settings page, workers, and remaining features

--- a/frontend/platforms/desktop/tauri/Cargo.toml
+++ b/frontend/platforms/desktop/tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nself-app"
+name = "nself-demo"
 version = "0.1.0"
 description = "Cross-platform nSelf application"
 authors = []
