--- a/frontend/env/.env.example
+++ b/frontend/env/.env.example
@@ -18,9 +18,9 @@ NEXT_PUBLIC_ENVIRONMENT=local
 # =============================================================================
 # APP SETTINGS
 # =============================================================================
-NEXT_PUBLIC_APP_NAME=ɳApp
-NEXT_PUBLIC_APP_TAGLINE=Your application tagline
-NEXT_PUBLIC_APP_DESCRIPTION=A modern web application built with ɳApp
+NEXT_PUBLIC_APP_NAME=ɳDemo
+NEXT_PUBLIC_APP_TAGLINE=Production-ready full-stack demo
+NEXT_PUBLIC_APP_DESCRIPTION=A production-ready demo showcasing ɳSelf backend platform
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_APP_VERSION=0.1.0
 NEXT_PUBLIC_PLATFORM=web
